# testgo

./: .fastdds.xml  .gitignore  .node_canvas.json  .real_robot_view_generated.rviz  .robot_profiles.json  K1_22dof-ZED.urdf  K1_locomotion.urdf  README.md  default_view.rviz  mini_mec_real_display.urdf  mini_mec_robot_gazebo.urdf  package.xml  run_sim 2.sh  sdk_program.py  sdk_pybind_b1_exmaple.py  setup.py  testgomac.py
.ament_index/share/movement_pkg/meshes/: lb_wheel_link.STL
launch/: gazebo_sim.launch.py  movement_pkg.launch.py
meshes/: Head_1.STL
movement_pkg/: movement.py  testgo.py
roboapps/Logbook/: logbook.py
roboapps/RobotSim5/: ch0_m1_first_words.py  ch0_m2_battery_report.py  ch0_m3_variables.py  ch1_m1_drive_to_charger.py  ch1_m2_square_path.py  ch1_m3_speed_variable.py  ch2_m1_sense_distance.py  ch2_m2_stop_before_wall.py  ch2_m3_avoid_obstacles.py  ch3_m1_grab_crate.py  ch3_m2_deliver_crate.py  ch3_m3_collect_function.py  chapter0_lab.py  chapter1_corridor.py  chapter2_dark_room.py  chapter3_warehouse.py
